disabled mongodb.so

--- a/laravel.ini
+++ b/laravel.ini
@@ -1,7 +1,7 @@
-date.timezone=Asia/Ho_Chi_Minh
+date.timezone=UTC
 display_errors=Off
 log_errors=On
-extension=mongodb.so
+; extension=mongodb.so
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
